--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=mybatis-demo
 # 配置数据库连接信息
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# 使用druid数据源
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/web01
 spring.datasource.username=root
 spring.datasource.password=123456
+# 配置mybatis
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
