--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 # 配置mybatis
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# # 指定XML映射配置文件的位置
+# mybatis.mapper-locations=classpath:mapper/*.xml
